Made story more user centric

--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -1,12 +1,12 @@
-We begin by using Karma's existing capability to capture the artists in the first CSV file as crm:E21\_Person from the CIDOC CRM ontology in a source model shown in Figure~\ref{fig:simple-model-screenshot}.  
-Karma can translate this model into an R2RML mapping.
-Karma can then compare it to the other mappings loaded in the Model Manager to discover new ways to integrate data. 
+The user begins by using Karma's existing capability to capture the artists in the first CSV file as crm:E21\_Person from the CIDOC CRM ontology in an R2RML mapping shown in Figure~\ref{fig:simple-model-screenshot}.  
+Karma can use this mapping to generate RDF. 
+Karma can also compare it to the other mappings loaded in the Model Manager to discover new ways to integrate data. 
 
 \begin{figure*}
 \begin{center}
 \includegraphics[width=4.8in]{images/4-simple-model.png}
 \vspace{-3mm}
-\caption{A Karma user has created an R2RML mapping for a CSV file of a museum's artists' biographical records and attempts to discover new data to augment the records}
+\caption{A Karma user has created an R2RML mapping for a CSV file of a museum's artists' biographical records and invokes the augment data command to discover new data sources}
 \vspace{-2mm}
 \label{fig:simple-model-screenshot}
 \end{center}
