--- a/5-search.tex
+++ b/5-search.tex
@@ -1,4 +1,4 @@
-We discover new data for the user to integrate into artist records by parsing R2RML mappings in Karma's repository that describe crm:E21\_Person for object and data properties.
+The user then clicks on the E21\_Person1 in the R2RML mapping and selects Augment Data to discover new data to integrate into artist records.  Karma then parses R2RML mappings in its repository that describe crm:E21\_Person for object and data properties.
 Karma could look in a triple store for all the properties with subjects or objects of type crm:E21\_Person or even use OWL to reason about the properties of crm:E21\_Person.
 That would be exhaustive and expensive and only serve to overwhelm the user with possibilities.
 Instead, the R2RML mappings allow Karma to identify meaningful properties and present them to the user as illustrated in Figure~\ref{fig:search-screenshot}.
