Added bloom filter description and added Step #s

--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -72,13 +72,13 @@ Our demonstration shows how users can easily create \rtworml mappings for their 
 
 We will show how a user can interactively develop a source model for this new dataset, discover what the Smithsonian has generated in relation to the user's new source model, and then integrate the Smithsonian's data into their own.  
 
-\subsubsection*{Modeling a New Source} 
+\subsubsection{Step 1: Modeling a New Source} 
 \input{4-simple-model}
 
-\subsubsection*{Discovering Data Sources} 
+\subsubsection{Step 2: Discovering Data Sources} 
 \input{5-search}
 
-\subsubsection*{Integrating Data Sources} 
+\subsubsection{Step 3: Integrating Data Sources} 
 \input{6-augment}
 
 \bibliographystyle{plain}
