--- a/2-dataset.tex
+++ b/2-dataset.tex
@@ -6,13 +6,12 @@ In the demonstration, we are using the SAAM LOD as a proxy for the Linked Data c
 \item \rtworml repository containing \rtworml mappings from the Web and made accessible by a \sparql endpoint (separate from the Linked Data endpoint).
 \karma provides a component to manage the \rtworml repository (Fig~\ref{fig:model-manager-screenshot}).
 \end{enumerate}
-\begin{figure*}[bth]
-\begin{center}
+\begin{figure*}[begin]
+\centering
 \includegraphics[width=4.8in]{images/3-model-manager.png}
-\vspace{-3mm}
+\vspace{-5mm}
 \caption{Screenshot of the model manager, showing the \rtworml mappings fetched from the GitHub repository where we shared the mappings for the SAAM dataset}
 \vspace{-2mm}
 \label{fig:model-manager-screenshot}
-\end{center}
 \vspace{-1.5em}
 \end{figure*}
