--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -1,14 +1,11 @@
 The user begins by using Karma's existing capability to capture the artists in the first CSV file as crm:E21\_Person from the CIDOC CRM ontology in an R2RML mapping shown in Figure~\ref{fig:simple-model-screenshot}.  
 Karma can use this mapping to generate RDF. 
-Karma can also compare it to the other mappings loaded in the Model Manager to discover new ways to integrate data. 
-
-\begin{figure*}
-\begin{center}
+Karma can also compare it to the other mappings loaded in the Model Manager to discover new related sources that can be used to augment the data.
+\begin{figure*}[t]
+\centering
 \includegraphics[width=4.8in]{images/4-simple-model.png}
-\vspace{-3mm}
-\caption{A Karma user has created an R2RML mapping for a CSV file of a museum's artists' biographical records and invokes the augment data command to discover new data sources}
-\vspace{-2mm}
+\vspace{-20pt}
+\caption{A Karma user creates an R2RML mapping for a CSV file of a museum's artists' biographical records and clicks 'Augment Data' to discover new data sources}
+\vspace{-21pt}
 \label{fig:simple-model-screenshot}
-\end{center}
-\vspace{-1.5em}
 \end{figure*}
