--- a/6-augment.tex
+++ b/6-augment.tex
@@ -1,14 +1,12 @@
 The user selects the artist's biography (for completeness) and birth (for validation). Karma then automatically constructs SPARQL queries for the data.
-To facilitate the integration for this demo, we generated owl:sameAs links between the datasets' artists using LIMES \cite{ngomo2011limes}.  In future work we will investigate adding this process for the user.
+To facilitate the integration for this demo, we generated owl:sameAs links between the datasets' artists using LIMES \cite{ngomo2011limes}.  
+In future work we will supporting the linking process in Karma.
 Karma then merges the results and updates the source model appropriately as illustrated in Figure~\ref{fig:augment-screenshot}, so the user can continue to explore the integrated data interactively. 
-
-\begin{figure*}
-\begin{center}
+\begin{figure*}[bt]
+\centering
 \includegraphics[width=4.9in]{images/6-augment.png}
-\vspace{-3mm}
-\caption{A Karma user has integrated biographical data from the Smithsonian into their dataset}
-\vspace{-2mm}
+\vspace{-5mm}
+\caption{A Karma user has integrated biographical data from the Smithsonian as new columns in their dataset. The columns contain artists' biographies and birth dates.}
+\vspace{-21pt}
 \label{fig:augment-screenshot}
-\end{center}
-\vspace{-1.5em}
 \end{figure*}
