Added draft of related work and conclusion

--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -69,6 +69,10 @@ We will show how a user can interactively develop a source model for this new da
 
 \textbf{Step 3: Integrating Data Sources} 
 \input{6-augment}
+\section{Related Work} 
+\input{7-related-work}
+\section{Conclusion} 
+\input{8-conclusion}
 \vspace{-5mm}
 \bibliographystyle{plain}
 \bibliography{refs}
