--- a/refs.bib
+++ b/refs.bib
@@ -48,6 +48,24 @@
   organization={AAAI Press}
 }
 
+@article{ives2008orchestra,
+  title={The ORCHESTRA collaborative data sharing system},
+  author={Ives, Zachary G and Green, Todd J and Karvounarakis, Grigoris and Taylor, Nicholas E and Tannen, Val and Talukdar, Partha Pratim and Jacob, Marie and Pereira, Fernando},
+  journal={ACM SIGMOD Record},
+  volume={37},
+  number={3},
+  pages={26--32},
+  year={2008},
+  publisher={ACM}
+}
+@inproceedings{pedrinaci2010iserve,
+  title={iServe: a linked services publishing platform},
+  author={Pedrinaci, Carlos and Liu, Dong and Maleshkova, Maria and Lambert, David and Kopecky, Jacek and Domingue, John},
+  booktitle={CEUR workshop proceedings},
+  volume={596},
+  year={2010}
+}
+
 @TechReport{Sundara:12:RRR,
   author      = "Seema Sundara and Richard Cyganiak and Souripriya Das",
   title       = "{R2RML}: {RDB} to {RDF} Mapping Language",
@@ -77,3 +95,12 @@
   urlyoutube = {http://www.youtube.com/watch?v=1Vaytr09H1w&feature=share&list=PLdD4tO6i0DwMXmBhOwlt7zEZKoOWrWpOA}
 }
 
+@inproceedings{ taheriyan12:lapis,
+  keywords = {"Source modeling"},
+  booktitle = {Proceedings of the ESWC 2012 Workshop on Linked APIs},
+  title = {Semi-Automatically Modeling Web APIs to Create Linked APIs},
+  year = {2012},
+  author = {Mohsen Taheriyan and Craig A. Knoblock and Pedro Szekely and Jose Luis Ambite},
+  urlpresentation = {http://prezi.com/pu5smfc7iexa/giscience-2012-generating-named-road-vector-data-from-raster-maps/},
+  urlpaper = {http://www.isi.edu/integration/papers/knoblock12-eswc.pdf}
+}
