--- a/2-dataset.tex
+++ b/2-dataset.tex
@@ -1,17 +1,7 @@
 \begin{enumerate}
-\item CSV file from a museum, containing 197 artists. %containing 2433 records of artworks by 
-\item Linked Data created from the Smithsonian American Art Museum (SAAM) content management system, including over 40,000 artworks and 8,000 artists accessible by a SPARQL endpoint. 
+\item CSV file from a museum, containing 197 artists. 
+\item Linked Data published by the Smithsonian American Art Museum (SAAM), including over 40,000 artworks and 8,000 artists accessible by a SPARQL endpoint. 
 In previous work~\cite{Szekely:2013vq} ~\todo{cite saam-lod github} we mapped the SAAM dataset to the CIDOC CRM ontology~\cite{Doerr:2003:CCR:958671.958678} using \rtworml.
-In the demonstration, we are using the SAAM LOD as a proxy for the Linked Data cloud to illustrate the vision of a Linked Data cloud populated with \rtworml models.
+In the demonstration, the SAAM LOD is a proxy for the Linked Data cloud to illustrate the vision of a Linked Data cloud populated with \rtworml models.
 \item \rtworml repository containing \rtworml mappings from the Web and made accessible by a \sparql endpoint (separate from the Linked Data endpoint).
-\karma provides a component to manage the \rtworml repository (Fig~\ref{fig:model-manager-screenshot}).
 \end{enumerate}
-\begin{figure*}[begin]
-\centering
-\includegraphics[width=4.8in]{images/3-model-manager.png}
-\vspace{-5mm}
-\caption{Screenshot of the model manager, showing the \rtworml mappings fetched from the GitHub repository where we shared the mappings for the SAAM dataset}
-\vspace{-2mm}
-\label{fig:model-manager-screenshot}
-\vspace{-1.5em}
-\end{figure*}
