More edits for conciseness
Fits on four pages!

--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -45,9 +45,9 @@ Information Sciences Institute and Department of Computer Science, USA\\
 \maketitle
 \begin{abstract}
 %  1. The problem
-The Linked Data cloud is an enormous repository of data, but it is difficult for users to find relevant data and to integrate this data into their own datasets. 
+The Linked Data cloud is an enormous repository of data, but it is difficult for users to find relevant data and integrate this data into their own datasets. 
 %  2. Why the problem is a problem (why it's an interesting problem [SPJ])
-Datasets in the Link Data cloud are represented using ontologies, but lack accurate descriptions of the data they contain.
+Datasets in the Linked Data cloud are represented using ontologies, but lack accurate descriptions of the data they contain.
 %  3. Startling sentence (what your solution achieves [SPJ])
 We present an approach that leverages \rtworml mappings to describe the contents of datasets in order to find relevant data and integrate it with a user's own datasets.
 %  4. Implication of startling sentence (what follows from your solution [SPJ])
@@ -59,7 +59,7 @@ Our demonstration shows how users can easily create \rtworml mappings for their 
 \section{Datasets}
 \input{2-dataset}
 \section{Demonstration}
-We will show how a user can interactively develop a source model for this new dataset, discover what the Smithsonian has published in relation to the user's new source model, and then integrate the Smithsonian's data into their own.  
+We will show how a user can interactively model an artist dataset, discover the Smithsonian's data for those artists, and then integrate the Smithsonian's data.  
 
 \textbf{Step 1: Modeling a New Source} 
 \input{4-simple-model}
@@ -69,11 +69,11 @@ We will show how a user can interactively develop a source model for this new da
 
 \textbf{Step 3: Integrating Data Sources} 
 \input{6-augment}
-\section{Related Work} 
+\section{Related Work and Conclusions} 
 \input{7-related-work}
-\section{Conclusion} 
+
 \input{8-conclusion}
 \vspace{-5mm}
-\bibliographystyle{plain}
+\bibliographystyle{acm}
 \bibliography{refs}
 \end{document}
