--- a/2-dataset.tex
+++ b/2-dataset.tex
@@ -1,7 +1,3 @@
-\begin{enumerate}
-\item CSV file from a museum, containing 197 artists. 
-\item Linked Data published by the Smithsonian American Art Museum (SAAM), including over 40,000 artworks and 8,000 artists accessible by a SPARQL endpoint. 
-In previous work~\cite{Szekely:2013vq} ~\todo{cite saam-lod github} we mapped the SAAM dataset to the CIDOC CRM ontology~\cite{Doerr:2003:CCR:958671.958678} using \rtworml.
-In the demonstration, the SAAM LOD is a proxy for the Linked Data cloud to illustrate the vision of a Linked Data cloud populated with \rtworml models.
-\item \rtworml repository containing \rtworml mappings from the Web and made accessible by a \sparql endpoint (separate from the Linked Data endpoint).
-\end{enumerate}
+For our demonstration we will integrate a CSV file containing 197 artists with Linked Data published by the Smithsonian American Art Museum (SAAM). 
+In previous work~\cite{Szekely:2013vq}, we mapped the SAAM dataset, including over 40,000 artworks and 8,000 artists to the CIDOC CRM ontology~\cite{Doerr:2003:CCR:958671.958678} using \rtworml and made it accessible by a SPARQL endpoint, along with a repository for the \rtworml mappings.
+The SAAM LOD here is a proxy for the Linked Data cloud to illustrate the vision of a Linked Data cloud populated with \rtworml models.
