--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,14 @@
+@TechReport{Alexander:11:DLD,
+  author      = "Keith Alexander and Richard Cyganiak and Michael Hausenblas and Jun Zhao",
+  title       = "Describing Linked Datasets with the {VoID} Vocabulary",
+  month       = mar,
+  note        = "http://www.w3.org/TR/2011/NOTE-void-20110303/",
+  year        = "2011",
+  bibsource   = "http://w2.syronex.com/jmr/w3c-biblio",
+  type        = "{W3C} Note",
+  institution = "W3C",
+}
+
 @inproceedings{conf/semweb/DimouSCMW13,
   author = {Dimou, Anastasia and Sande, Miel Vander and Colpaert, Pieter and Mannens, Erik and de Walle, Rik Van},
   booktitle = {International Semantic Web Conference (Posters and Demos)},
@@ -50,7 +61,7 @@
 
 @article{ives2008orchestra,
   title={The ORCHESTRA collaborative data sharing system},
-  author={Ives, Zachary G and Green, Todd J and Karvounarakis, Grigoris and Taylor, Nicholas E and Tannen, Val and Talukdar, Partha Pratim and Jacob, Marie and Pereira, Fernando},
+  author={Ives, Zachary G and Green, Todd J and Karvounarakis, Grigoris and Taylor, Nicholas E and Tannen, Val and Talukdar, Partha P and Jacob, Marie and Pereira, Fernando},
   journal={ACM SIGMOD Record},
   volume={37},
   number={3},
@@ -85,7 +96,6 @@
   month = {May},
   year = {2013},
   author = {Pedro Szekely and Craig A. Knoblock and Fengyu Yang and Xuming Zhu and Eleanor Fink and Rachel Allen and Georgina Goodlander},
-  note = {Awarded Best In-Use Paper at ESWC 2013},
   rating = {0},
   date-added = {2013-03-17T04:37:12GMT},
   date-modified = {2013-05-04T01:24:47GMT},
@@ -104,3 +114,4 @@
   urlpresentation = {http://prezi.com/pu5smfc7iexa/giscience-2012-generating-named-road-vector-data-from-raster-maps/},
   urlpaper = {http://www.isi.edu/integration/papers/knoblock12-eswc.pdf}
 }
+
