--- a/4-simple-model.tex
+++ b/4-simple-model.tex
@@ -1,7 +1,7 @@
-The user begins by using Karma's existing capability to capture the artists in the first CSV file as crm:E21\_Person from the CIDOC CRM ontology in an R2RML mapping shown in Figure~\ref{fig:simple-model-screenshot}.  
+The user begins by using Karma's existing capability to model the artists in the CSV file as crm:E21\_Person in an R2RML mapping shown in Figure~\ref{fig:simple-model-screenshot}.  
 Karma can use this mapping to generate RDF. 
-Karma can also compare it to the other mappings loaded in the Model Manager to discover new related sources that can be used to augment the data.
-\begin{figure*}[bh]
+Karma can also compare it to the other mappings to discover new related sources that can be used to integrate with.
+\begin{figure*}[b]
 \centering
 \includegraphics[width=4.8in]{images/4-simple-model.png}
 \vspace{-20pt}
