--- a/0-iswc-demo-paper.tex
+++ b/0-iswc-demo-paper.tex
@@ -61,19 +61,19 @@ Our demonstration shows how users can easily create \rtworml mappings for their 
 \section{Demonstration}
 We will show how a user can interactively model an artist dataset, discover the Smithsonian's data for those artists, and then integrate the Smithsonian's data.  
 
-\textbf{Step 1: Modeling a New Source} 
+\textbf{Step 1: Modeling a New Source.} 
 \input{4-simple-model}
 
-\textbf{Step 2: Discovering Data Sources} 
+\textbf{Step 2: Discovering Data Sources.} 
 \input{5-search}
 
-\textbf{Step 3: Integrating Data Sources} 
+\textbf{Step 3: Integrating Data Sources.} 
 \input{6-augment}
 \section{Related Work and Conclusions} 
 \input{7-related-work}
 
 \input{8-conclusion}
-\vspace{-5mm}
+\vspace{-1mm}
 \bibliographystyle{acm}
 \bibliography{refs}
 \end{document}
