--- a/1-introduction.tex
+++ b/1-introduction.tex
@@ -6,9 +6,9 @@ Museums could use additional information about their artists in the Linked Data 
 
 Our approach to this use case, built into our \karma data integration system~\cite{Szekely:2013vq}, leverages \rtworml mappings~\cite{Sundara:12:RRR} to describe user's datasets and datasets in the Linked Data cloud.
 We envision a world where such datasets include richer descriptions than what is available today.
-Today, datasets include, at best, a VoID description\cite{Alexander:11:DLD} with basic metadata, such as access method and vocabularies used.
+Today, datasets include, at best, a VoID description~\cite{Alexander:11:DLD} with basic metadata, such as access method and vocabularies used.
 We propose adding \rtworml mappings, which contain significantly richer descriptions about each subject and its properties.
 Even though \rtworml was defined to specify mappings from relational databases to RDF, recent work~\cite{conf/semweb/DimouSCMW13} has proposed extensions to handle other types of data, including CSV, JSON, XML and Web APIs.
 Consequently, it is reasonable to expect that more datasets in the Linked Data cloud could be published with \rtworml-style descriptions.
 
-In this demonstration we show how museum users can use \karma to quickly define an \rtworml mapping of a dataset (our previous work), how they can use the \rtworml mapping to find more information about the artists in their dataset, and how they can augment their dataset with the additional information.
+In this demonstration we show how museum users can use \karma to quickly define an \rtworml mapping of a dataset (our previous work), how they can use \rtworml mappings to find more information about the artists in their dataset, and how they can augment their dataset with additional information.
