--- a/7-related-work.tex
+++ b/7-related-work.tex
@@ -1,7 +1,7 @@
 We see similarities in our approach with those used in relational database integration and semantic service composition.  
-ORCHESTRA\cite{ives2008orchestra} starts, like R2RML, by aligning database tables to a schema graph.  
-For integration, heuristics are used to translate keyword searches over the graph into join paths by its Q query system. 
-However, these joins are not guaranteed to be semantically meaningful, unlike the integration paths Karma finds using R2RML.
+ORCHESTRA\cite{ives2008orchestra} starts, like \rtworml, by aligning database tables to a schema graph.  
+For integration, heuristics are used to translate keyword searches over the graph into join paths using its Q query system. 
+However, these joins are not guaranteed to be semantically meaningful, unlike the integration paths \karma finds using \rtworml.
 
-Meanwhile, platforms like iServe\cite{pedrinaci2010iserve} aim to capture Linked Services and make them discoverable and queryable by annotating them with their Minimal Service Model using an editor.
-We have also repurposed R2RML to capture service descriptions in Karma\cite{taheriyan12:lapis}, which means we can also enable our users to compose such services with other data sources like JSON, XML, and DBs. 
+Platforms such as iServe\cite{pedrinaci2010iserve} aim to capture Linked Services and make them discoverable and queryable by annotating them with their Minimal Service Model using an editor.
+We have also repurposed \rtworml to capture service descriptions in Karma\cite{taheriyan12:lapis}, which means we can also enable our users to compose such services with other data sources. 
