--- a/refs.bib
+++ b/refs.bib
@@ -2,12 +2,12 @@
   author      = "Keith Alexander and Richard Cyganiak and Michael Hausenblas and Jun Zhao",
   title       = "Describing Linked Datasets with the {VoID} Vocabulary",
   month       = mar,
-  note        = "http://www.w3.org/TR/2011/NOTE-void-20110303/",
   year        = "2011",
   bibsource   = "http://w2.syronex.com/jmr/w3c-biblio",
   type        = "{W3C} Note",
   institution = "W3C",
 }
+@comment{note        = "http://www.w3.org/TR/2011/NOTE-void-20110303/",}
 
 @inproceedings{conf/semweb/DimouSCMW13,
   author = {Dimou, Anastasia and Sande, Miel Vander and Colpaert, Pieter and Mannens, Erik and de Walle, Rik Van},
@@ -53,7 +53,7 @@
 @inproceedings{ngomo2011limes,
   title={LIMES: a time-efficient approach for large-scale link discovery on the web of data},
   author={Ngomo, Axel-Cyrille Ngonga and Auer, S{\"o}ren},
-  booktitle={Proceedings of the Twenty-Second international joint conference on Artificial Intelligence-Volume Volume Three},
+  booktitle={Proceedings of the Twenty-Second international joint conference on Artificial Intelligence},
   pages={2312--2317},
   year={2011},
   organization={AAAI Press}
@@ -81,19 +81,17 @@
   author      = "Seema Sundara and Richard Cyganiak and Souripriya Das",
   title       = "{R2RML}: {RDB} to {RDF} Mapping Language",
   month       = sep,
-  note        = "http://www.w3.org/TR/2012/REC-r2rml-20120927/",
   year        = "2012",
   bibsource   = "http://w2.syronex.com/jmr/w3c-biblio",
   type        = "{W3C} Recommendation",
   institution = "W3C",
 }
+@comment{ note        = "http://www.w3.org/TR/2012/REC-r2rml-20120927/",}
 
 @inproceedings{ Szekely:2013vq,
   title = {{Connecting the Smithsonian American Art Museum to the Linked Data Cloud}},
-  booktitle = {Proceedings of the 10th Extended Semantic Web Conference},
-  address = {Montpellier},
+  booktitle = {Proceedings of the 10th ESWC},
   uri = {̆rl{papers2://publication/uuid/B9751C9E-0A53-4B2E-93C4-7524C7351942}},
-  month = {May},
   year = {2013},
   author = {Pedro Szekely and Craig A. Knoblock and Fengyu Yang and Xuming Zhu and Eleanor Fink and Rachel Allen and Georgina Goodlander},
   rating = {0},
