--- a/8-conclusion.tex
+++ b/8-conclusion.tex
@@ -1,2 +1,2 @@
-By building on \karma's ability to quickly model many source types, we demonstrate how museum curators can identify other linked museum data sources, identify relevant, available biographical attributes for their artists, link their artists to those other sources, and then integrate the data from those sources into their own dataset. 
-Through this source discovery and integration, the museum curator can transparently compose and join other museums' sources and services in a semantically meaningful, interactive way not previously possible.
+By building on \karma's ability to quickly model many source types, we demonstrate how a user can discover other linked data sources, select the desired attributes from those sources, and then integrate the data from those sources into their own dataset. 
+Through this source discovery and integration, a user can transparently compose and join other sources and services in a semantically meaningful, interactive way that was not previously possible.
